--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
   "author": "an.tsarev <an.tsarev@corp.vk.com>",
   "license": "ISC"
 }
